flask_menger/static/menger/css/menger.css
li.menu-item.active {
    background-color: #428BCA;
}

li.menu-item.active a {
    color: white;
}

.list-group {
    max-height: 21em;
    overflow: auto;
}

.panel-title a.glyphicon {
    text-decoration: none;
    color: lightgrey;
}

.panel-title a.glyphicon.active,
.panel-title a.glyphicon:hover {
    color: #428BCA;
    cursor: pointer;
}


td.measure, th.measure {
    text-align: right;
}

td.group, th.group {
    text-align: center;
    border-right: 8px solid white;
}

.totals td {
    text-align: right;
    font-weight: bold;
}

.left-menu {
    padding-bottom: 1em;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.option {
    background-color: #f5f5f5;
}

.wait {
    cursor: wait;
}

.list-group-item.menu-item {
    border: none;
    border-radius: 0;
}

.list-group.menu-list {
    border-top: 1px solid #DDD;
    margin-bottom: 0;
}

.svg-wrapper {
    box-sizing: border-box;
    width: 100%;
    height: 500px;
    float: left;
    border: 5px solid white;
    background-color: whitesmoke;
}

p.label {
    color: black;
}

.multi {
    width: 50%;
    height: 400px;
}

.nvtooltip *{
    font-size: 0.8em;
}

